# TT

./: .gitignore  CMakeLists.txt  COMPLETE_FIX_DOCUMENTATION.md  CRASH_FIX_IMPLEMENTATION.md  CRASH_FIX_README.md  DLT_COMMAND_RESPONSE_FIX_DOCUMENTATION.md  DLT_CONNECTION_HANG_FIX_DOCUMENTATION.md  DataLinkTargetService_Guide.md  FILE_TRANSFER_SYNC_FIX_DOCUMENTATION.md  FINAL_NO_HANGS_DOCUMENTATION.md  FINAL_WORKING_SYSTEM_DOCUMENTATION.md  FULLY_WORKING_SYSTEM_DOCUMENTATION.md  INFINITE_HANG_FIX_DOCUMENTATION.md  MASTER_CONTROLLED_SYSTEM_FINAL_DOCUMENTATION.md  PARTIAL_DATA_TRANSFER_FIX_DOCUMENTATION.md  README.md  START_POINT_SYNCHRONIZATION_DOCUMENTATION.md  STRING_CONVERSION_PARTIAL_TRANSFER_FIX_DOCUMENTATION.md  TRIGGER_SYNCHRONIZATION_FIX_DOCUMENTATION.md  WORKING_DATA_COLLECTION_INTEGRATION.md  common.cpp  complete_deployment_guide.md  complete_fixed_master_controller.cpp  complete_fixed_slave_agent.cpp  crash_fixed_master_controller.cpp  crash_fixed_slave_agent.cpp  debug_master_controller.cpp  debug_slave_agent.cpp  deployment_guide.md  design_document.md  dual_machine_deployment_guide.md  enhanced_master_controller.cpp  enhanced_master_controller.hpp  enhanced_slave_agent.cpp  enhanced_slave_agent.hpp  fixed_common.cpp  fixed_enhanced_master_controller.cpp  fixed_enhanced_master_controller_new.cpp  fixed_enhanced_slave_agent.cpp  fixed_enhanced_slave_agent_new.cpp  (+32 more)
upload/src/: CMakeLists.txt  common.hpp  main.cpp  streams.hpp
